(library
 (name fsocaml)
 (libraries dream controllers views))

(rule
 (target tailwindcss.ml)
 (deps ../assets/tailwind.css ../assets/tailwind.config.js (glob_files %{project_root}/lib/views/**.eml.html))
 (action
  (with-stdout-to
   %{null}
   (progn
    (run
     npx
     tailwindcss
     -c
     ../assets/tailwind.config.js
     -i
     ../assets/tailwind.css
     -o
     app.css)
    (run ocaml-crunch -m plain ./ -o %{target})))))
